【プロジェクト名】SpringBootのテスト 【概要】テーブルを参照してレスポンスを返却するまで 【コミット理由】

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=demo
+
+# データベースの接続URL
+# データベースへの接続URLを指定します。ホスト名、ポート番号、データベース名を含みます。
+spring.datasource.url=jdbc:mysql://localhost:3306/tododb
+
+# データベースのユーザー名
+# データベースのユーザー名
+spring.datasource.username=root
+
+# データベースのパスワード
+spring.datasource.password=my-secret-pw
+
+# JDBCドライバのクラス名
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA（Hibernate）の設定
+# Hibernateによるスキーマ自動更新の設定です。update、create、create-drop、validate、noneなどのオプションがあります。
+spring.jpa.hibernate.ddl-auto=update
+
+# HibernateのSQL方言
+# 使用するデータベースの方言を指定します。
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# ログの設定（SQLクエリをログに出力）
+# このプロパティをtrueに設定すると、実行されたSQLクエリがログに出力されます。
+spring.jpa.show-sql=true
