【概要】最新 【コミット理由】

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # ログの設定（SQLクエリをログに出力）
 # このプロパティをtrueに設定すると、実行されたSQLクエリがログに出力されます。
 spring.jpa.show-sql=true
+
+# jwtシークレットの設定
+jwt.secret=fafeaf5f46a
+
+# トークンの有効期限（秒単位）
+jwt.expiration=3600  
