【概要】otp送信を実装 【関連処理】

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
     name: demo
   messages:
     basename: messages
+    encoding: UTF-8
   datasource:
     url: jdbc:mysql://localhost:3306/tododb
     username: root
