--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
@@ -61,12 +62,12 @@
 			<version>8.0.33</version>
 		</dependency>
 		<dependency>
-    		<groupId>org.apache.commons</groupId>
-   			<artifactId>commons-lang3</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
-   			<groupId>org.springframework.boot</groupId>
-   			<artifactId>spring-boot-starter-security</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
@@ -82,6 +83,20 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
+		</dependency>
+		<!--https://mvnrepository.com/artifact/software.amazon.awssdk/ses-->
+		<!--https://qiita.com/say87a/items/e5c341b4292ebc4f2026-->
+		<!--https://matsu-chara.hatenablog.com/entry/2022/04/09/110000-->
+		<!--		<dependency>-->
+		<!--			<groupId>software.amazon.awssdk</groupId>-->
+		<!--			<artifactId>ses</artifactId>-->
+		<!--			<version>2.26.29</version>-->
+		<!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/sesv2 -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>sesv2</artifactId>
+			<version>2.26.29</version>
 		</dependency>
 	</dependencies>
 
